[package]
name = "sonirawwr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
image = "0.24.6"
imagepipe = "0.5.0"
imageproc = { version = "0.23.0", features = ["rayon"] }
itertools = "0.10.5"
rawloader = "0.37.1"
rayon = "1.7.0"
